addin online user component

--- a/ClientAPP/.gitignore
+++ b/ClientAPP/.gitignore
@@ -29,7 +29,7 @@ yarn-error.log
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
-
+/bin/*
 # Miscellaneous
 /.angular/cache
 .sass-cache/
